<resources>
    <string name="app_name">Marvel Quiz App</string>
    <string name="submit">Submit</string>
    <string name="reset">Reset</string>
    <string name="hint">Please type your answer here</string>
    <string name="congratulations">Congratulations!</string>
    <string name="better">Try again, you can do it better!</string>
    <string name="close">Try again, you are close!</string>
    <string name="score">Your score is</string>
    //Q1
    <string name="Q1">Who voices Jarvis, Iron Man\'s artificially intelligent assistant?</string>
    <string name="rg1b1">SIMON PEGG</string>
    <string name="rg1b2">EWAN MCGREGOR</string>
    <string name="rg1b3">PAUL BETTANY c</string>
    <string name="rg1b4">EDDIE REDMAYNE</string>
    //Q2
    <string name="Q2">What was Sam Wilson before he became Falcon?</string>
    <string name="rg2b1">A NAVY SEAL</string>
    <string name="rg2b2">A PARARESCUE c</string>
    <string name="rg2b3">A PILOT</string>
    <string name="rg2b4">A PROFESSIONAL DAREDEVIL</string>
    //Q3
    <string name="Q3">Which actor have played Iron Man in the Marvel Cinematic Universe?</string>
    //Q4
    <string name="Q4">Which of these is Infinity Stone in Marvel Cinematic Universe?</string>
    <string name="cb1b1">Space Stone</string>
    <string name="cb1b2">Time Stone</string>
    <string name="cb1b3">Gold Stone</string>
    <string name="cb1b4">Reality Stone</string>
    <string name="cb1b5">Mind Stone</string>
    <string name="cb1b6">Soul Stone</string>
    <string name="cb1b7">Power Stone</string>
    //Q5
    <string name="Q5">Forged in the heart of a dying star, what is Thor\'s hammer\'s name?</string>
    <string name="rg5b1">MJOLNIR c</string>
    <string name="rg5b2">THUNDER BRINGER</string>
    <string name="rg5b3">FJORDIR</string>
    <string name="rg5b4">ANDURIL</string>
</resources>
