<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.marvelquizapp.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.CardView
                android:id="@+id/Q1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:orientation="vertical">

                    <TextView
                        style="@style/questions"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Q1" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:paddingRight="10dp"
                            android:src="@drawable/jarvis" />

                        <RadioGroup
                            android:id="@+id/rb1"
                            style="@style/questions"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <RadioButton
                                android:id="@+id/Q1B1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/rg1b1" />

                            <RadioButton
                                android:id="@+id/Q1B2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/rg1b2" />

                            <RadioButton
                                android:id="@+id/Q1B3"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/rg1b3" />

                            <RadioButton
                                android:id="@+id/Q1B4"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/rg1b4" />

                        </RadioGroup>

                    </LinearLayout>
                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/Q2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/Q1"
                android:layout_alignRight="@+id/Q1"
                android:layout_below="@id/Q1"
                android:layout_marginBottom="1dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:orientation="vertical">

                    <TextView
                        style="@style/questions"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Q2" />

                    <RadioGroup
                        android:id="@+id/rb2"
                        style="@style/questions"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RadioButton
                            android:id="@+id/Q2B1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/rg2b1" />

                        <RadioButton
                            android:id="@+id/Q2B2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/rg2b2" />

                        <RadioButton
                            android:id="@+id/Q2B3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/rg2b3" />

                        <RadioButton
                            android:id="@+id/Q2B4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/rg2b4" />

                    </RadioGroup>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/Q3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/Q1"
                android:layout_alignRight="@+id/Q1"
                android:layout_below="@+id/Q2"
                android:layout_marginBottom="1dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:orientation="vertical">

                    <TextView
                        style="@style/questions"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:text="@string/Q3" />

                    <EditText
                        android:id="@+id/Q3A"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint"
                        android:inputType="textCapWords"
                        android:maxLines="1" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/Q4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/Q1"
                android:layout_alignRight="@+id/Q1"
                android:layout_below="@+id/Q3"
                android:layout_marginBottom="1dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        style="@style/questions"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Q4" />

                    <CheckBox
                        android:id="@+id/Q4CB1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/cb1b1" />

                    <CheckBox
                        android:id="@+id/Q4CB2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/cb1b2" />

                    <CheckBox
                        android:id="@+id/Q4CB3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/cb1b3" />

                    <CheckBox
                        android:id="@+id/Q4CB4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/cb1b4" />

                    <CheckBox
                        android:id="@+id/Q4CB5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/cb1b5" />

                    <CheckBox
                        android:id="@+id/Q4CB6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/cb1b6" />

                    <CheckBox
                        android:id="@+id/Q4CB7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/cb1b7" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/Q5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/Q1"
                android:layout_alignRight="@+id/Q1"
                android:layout_below="@id/Q4"
                android:layout_marginBottom="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:orientation="vertical">

                    <TextView
                        style="@style/questions"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Q5" />

                    <RadioGroup
                        android:id="@+id/rb5"
                        style="@style/questions"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RadioButton
                            android:id="@+id/Q5B1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/rg5b1" />

                        <RadioButton
                            android:id="@+id/Q5B2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/rg5b2" />

                        <RadioButton
                            android:id="@+id/Q5B3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/rg5b3" />

                        <RadioButton
                            android:id="@+id/Q5B4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/rg5b4" />

                    </RadioGroup>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/Q5"
                android:gravity="center">

                <Button
                    android:id="@+id/submitButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginRight="10dp"
                    android:onClick="submitQuestions"
                    android:text="@string/submit" />

                <Button
                    android:id="@+id/resetButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="10dp"
                    android:onClick="resetQuestions"
                    android:text="@string/reset" />

            </LinearLayout>

        </RelativeLayout>
    </ScrollView>
</LinearLayout>
